<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="igorluciano.com.br.combustivelflex.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/image_view"
                android:src="@drawable/desertroad4k"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_gasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="30dp"
                    android:hint="@string/hint_gasolina"
                    android:id="@+id/gasolina_edit_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_etanol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/hint_etanol"
                    android:id="@+id/etanol_edit_text" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="30sp"
                android:id="@+id/btnCalcular"
                android:textColor="#FFFFFF"
                android:background="#2196F3"
                android:layout_below="@+id/etanol_edit_Text"
                android:text="@string/btn_calcular"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="30sp"
                android:id="@+id/btnLimpar"
                android:textColor="#FFFFFF"
                android:background="#2196F3"
                android:layout_below="@+id/etanol_edit_Text"
                android:text="@string/btn_limpar"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_ads"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

            <com.mopub.mobileads.MoPubView
                android:id="@+id/mopub_sample_ad"
                android:layout_alignParentBottom="true"
                android:layout_width="fill_parent"
                android:layout_height="50dp"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
