<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/result_linear_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_local_gas_station_black_48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"
            android:textColor="#2196F3"
            android:text="@string/textResultado"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF5722"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            android:id="@+id/txtResultado_text_view"
            android:text=""/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/car"/>

        <RelativeLayout
            android:id="@+id/relative_layout_ads"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

            <com.mopub.mobileads.MoPubView
                android:id="@+id/mopub_sample_ad"
                android:layout_alignParentBottom="true"
                android:layout_width="fill_parent"
                android:layout_height="50dp"/>
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:stretchColumns="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Dicas para economizar combustível"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textEcon"
                android:layout_marginBottom="10dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:background="#c2c2c2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="Marchas certas por Km/h"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="1ª marcha até 20km/h"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="2ª até 40km/h"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="3ª de 40 a 60km/h"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="4ª de 60 a 80km/h "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="5ª a partir de 80km/h"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>